--- a/ChechenWar/readme
+++ b/ChechenWar/readme
@@ -1,4 +1,4 @@
-Data for: Agricultural abandonment and re-cultivation during and after the Chechen Wars in the northern Caucasus
+Data and codes for: Agricultural abandonment and re-cultivation during and after the Chechen Wars in the northern Caucasus
 Published: 01-03-2019
 |
 Version 1
