--- a/ChechenWar/readme
+++ b/ChechenWar/readme
@@ -6,4 +6,4 @@ Version 1
 DOI:10.17632/3dcnrhyfmd.1
 
 Description
-Supplement to: Yin et al. (2019) Agricultural abandonment and re-cultivation during and after the Chechen Wars in the northern Caucasus. Global Environmental Change.
+Supplement to: Yin et al. (2019) Agricultural abandonment and re-cultivation during and after the Chechen Wars in the northern Caucasus. Global Environmental Change, 55:149-159
