--- a/CentralAsiaForest/Readme
+++ b/CentralAsiaForest/Readme
@@ -1,1 +1,7 @@
 
+Readme
+Forest cover maps in Central Asia
+
+RELATED PUBLICATIONS:
+
+Yin, H. Khamzina, A. Pflugmacher, D. Martius, C. (2017) Forest cover mapping in post-Soviet Central Asia using multi-resolution remote sensing imagery. Scientific reports 7 (1), 1-11
