--- a/CentralAsiaForest/Readme
+++ b/CentralAsiaForest/Readme
@@ -1,6 +1,6 @@
 
 Readme
-Forest cover maps in Central Asia
+Forest cover maps in Central Asia; Training and validation samples for Landsat classification
 
 RELATED PUBLICATIONS:
 
